--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
             android:background="#EFEFEF"
             android:gravity="end"
             android:padding="16dp"
-            android:text="@{viewModel.displayValue}"
+            android:text="@{viewModel.valueDisplay}"
             android:textSize="32sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -82,7 +82,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="4dp"
-            android:onClick="@{() -> viewModel.setOperation(Operation.PERCENT)}"
+            android:onClick="@{() -> viewModel.addOperation(Operation.PERCENT)}"
             android:text="%"
             android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@id/button_9"
@@ -98,7 +98,7 @@
             android:layout_height="0dp"
             android:layout_margin="4dp"
             android:backgroundTint="#FF9800"
-            android:onClick="@{() -> viewModel.setOperation(Operation.DIVIDE)}"
+            android:onClick="@{() -> viewModel.addOperation(Operation.DIVIDE)}"
             android:text="÷"
             android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@id/button_multiply"
@@ -114,7 +114,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="4dp"
-            android:onClick="@{() -> viewModel.appendDigit('7')}"
+            android:onClick="@{() -> viewModel.addDigit(7)}"
             android:text="7"
             android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@id/button_4"
@@ -129,7 +129,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="4dp"
-            android:onClick="@{() -> viewModel.appendDigit('8')}"
+            android:onClick="@{() -> viewModel.addDigit(8)}"
             android:text="8"
             android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@id/button_5"
@@ -144,7 +144,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="4dp"
-            android:onClick="@{() -> viewModel.appendDigit('9')}"
+            android:onClick="@{() -> viewModel.addDigit(9)}"
             android:text="9"
             android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@id/button_6"
@@ -160,7 +160,7 @@
             android:layout_height="0dp"
             android:layout_margin="4dp"
             android:backgroundTint="#FF9800"
-            android:onClick="@{() -> viewModel.setOperation(Operation.MULTIPLY)}"
+            android:onClick="@{() -> viewModel.addOperation(Operation.MULTIPLY)}"
             android:text="×"
             android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@id/button_subtract"
@@ -176,7 +176,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="4dp"
-            android:onClick="@{() -> viewModel.appendDigit('4')}"
+            android:onClick="@{() -> viewModel.addDigit(4)}"
             android:text="4"
             android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@id/button_1"
@@ -191,7 +191,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="4dp"
-            android:onClick="@{() -> viewModel.appendDigit('5')}"
+            android:onClick="@{() -> viewModel.addDigit(5)}"
             android:text="5"
             android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@id/button_2"
@@ -206,7 +206,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="4dp"
-            android:onClick="@{() -> viewModel.appendDigit('6')}"
+            android:onClick="@{() -> viewModel.addDigit(6)}"
             android:text="6"
             android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@id/button_3"
@@ -222,7 +222,7 @@
             android:layout_height="0dp"
             android:layout_margin="4dp"
             android:backgroundTint="#FF9800"
-            android:onClick="@{() -> viewModel.setOperation(Operation.SUBTRACT)}"
+            android:onClick="@{() -> viewModel.addOperation(Operation.SUBTRACT)}"
             android:text="-"
             android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@id/button_add"
@@ -238,7 +238,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="4dp"
-            android:onClick="@{() -> viewModel.appendDigit('1')}"
+            android:onClick="@{() -> viewModel.addDigit(1)}"
             android:text="1"
             android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@id/button_sign"
@@ -253,7 +253,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="4dp"
-            android:onClick="@{() -> viewModel.appendDigit('2')}"
+            android:onClick="@{() -> viewModel.addDigit(2)}"
             android:text="2"
             android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@id/button_0"
@@ -268,7 +268,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="4dp"
-            android:onClick="@{() -> viewModel.appendDigit('3')}"
+            android:onClick="@{() -> viewModel.addDigit(3)}"
             android:text="3"
             android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@id/button_decimal"
@@ -284,7 +284,7 @@
             android:layout_height="0dp"
             android:layout_margin="4dp"
             android:backgroundTint="#FF9800"
-            android:onClick="@{() -> viewModel.setOperation(Operation.ADD)}"
+            android:onClick="@{() -> viewModel.addOperation(Operation.ADD)}"
             android:text="+"
             android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@id/button_equals"
@@ -315,7 +315,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="4dp"
-            android:onClick="@{() -> viewModel.appendDigit('0')}"
+            android:onClick="@{() -> viewModel.addDigit(0)}"
             android:text="0"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -330,7 +330,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="4dp"
-            android:onClick="@{() -> viewModel.appendDecimal()}"
+            android:onClick="@{() -> viewModel.addPoint()}"
             android:text="."
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -346,7 +346,7 @@
             android:layout_height="0dp"
             android:layout_margin="4dp"
             android:backgroundTint="#4CAF50"
-            android:onClick="@{() -> viewModel.calculate()}"
+            android:onClick="@{() -> viewModel.compute()}"
             android:text="="
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
